feat(2/2): added authentication to all endpoints
