# src/docs/swagger.yaml
@@ -75,6 +75,10 @@ paths:
         in: query
         name: download
         type: boolean
+      - description: The auth token to use to access this endpoint
+        in: query
+        name: Authorization
+        type: string
       produces:
       - application/json
       responses:
@@ -92,6 +96,11 @@ paths:
   /peek/alerts:
     get:
       description: Returns all alerts
+      parameters:
+      - description: The auth token to use to access this endpoint.
+        in: query
+        name: Authorization
+        type: string
       produces:
       - application/json
       responses:
@@ -101,24 +110,24 @@ paths:
             additionalProperties:
               type: string
             type: object
+        "401":
+          description: Unauthorized
         "429":
           description: Too Many Requests
         "500":
           description: Internal Server Error
-          schema:
-            type: string
       summary: Returns all alerts
       tags:
       - apiPeekGroup
   /peek/shutdown:
-    post:
+    put:
       consumes:
       - application/json
       description: Shuts down the server
       parameters:
       - description: The auth token to use to access this endpoint
-        in: formData
-        name: token
+        in: query
+        name: Authorization
         type: string
       produces:
       - application/json
@@ -138,10 +147,15 @@ paths:
       tags:
       - apiPeekGroup
   /peek/stop:
-    post:
+    put:
       consumes:
       - application/json
       description: Stop the Peek application
+      parameters:
+      - description: The auth token to use to access this endpoint
+        in: query
+        name: Authorization
+        type: string
       produces:
       - application/json
       responses:
@@ -169,7 +183,7 @@ paths:
         CPU cache size, the client's IP, the client's country, the client's flag,
         and the server's flag.
       parameters:
-      - description: The auth token to use to access this endpoint
+      - description: The auth token to use to access this endpoint.
         in: query
         name: Authorization
         type: string
